--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid var(--color-grey-light-4);
 
   &__logo {
     height: 3.25rem;
@@ -65,19 +66,18 @@
   align-items: center;
   align-self: stretch;
 
-   & > * {
+  & > * {
     padding: 0 2rem;
     cursor: pointer;
     height: 100%;
     display: flex;
     align-items: center;
   }
- 
 
   &__icon-box {
     display: flex;
     justify-content: center;
-   
+
     position: relative;
   }
 
