--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,4 +1,54 @@
 .sidebar {
-  background-color: blue;
-  flex: 0 0 18%;
+  background-color: var(--color-grey-dark-1);
+  flex: 0 0 16%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 50rem;
+ 
+
+  .side-nav {
+    list-style: none;
+    font-size: 1.2rem;
+    margin-top: 3.5rem;
+   
+
+    &__item {
+      position: relative;
+
+      &:not(:last-child) {
+        margin-bottom: 0.5rem;
+      }
+    }
+
+    &__link:link,
+    &__link:visited {
+      text-decoration: none;
+      color: var(--color-grey-light-1);
+      text-transform: uppercase;
+      display: inline-block;
+      padding: 1.5rem 3rem;
+      display: flex;
+      align-items: center;
+    }
+
+    &__icon {
+      width: 1.75rem;
+      height: 1.75rem;
+      margin-right: 2rem;
+      fill: currentColor;
+    }
+  }
+}
+
+
+.legal {
+  font-size: 1.1rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: var(--color-grey-dark-4);
+
+  @media only screen and (max-width: 768px) {
+    display: none;
+  }
 }
