--- a/src/components/overview/overview.scss
+++ b/src/components/overview/overview.scss
@@ -4,18 +4,22 @@
   border-bottom: var(--line);
   color: var(--color-grey-dark-2);
   background-color: var(--color-grey-light-1);
+  justify-content: center;
 
   &__heading {
-    font-size: 2.25rem;
+    font-size: 2.05rem;
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
-    padding: 1.5rem 3rem;
+    padding: 1.2rem 3rem;
   }
 
   &__stars {
     display: flex;
     margin-right: auto;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0.45rem;
   }
 
   &__icon-star,
@@ -23,6 +27,11 @@
     width: 1.75rem;
     height: 1.75rem;
     fill: var(--color-primary);
+    margin-right: 0.6rem;
+  }
+
+  &__icon-location {
+    margin-right: 0.5rem;
   }
 
   &__location {
@@ -71,4 +80,6 @@
   background-color: transparent;
   cursor: pointer;
   padding-bottom: 2px;
+  border-bottom: 1px solid currentColor;
+  font-size: inherit;
 }
